--- a/app/src/main/res/layout/activity_about_item.xml
+++ b/app/src/main/res/layout/activity_about_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
+    android:background="@drawable/gomer"
     tools:context=".AboutItemActivity">
 
     <TextView
